<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="baseurlww">http://sequoro1.jelasticlw.com.br/</string>
    <string name="baseurlo">http://10.0.2.2:8080/site/</string>
    <string name="baseurl">http://192.168.43.166:8080/site/</string>
    <string name="app_name">Sequoro</string>
    <string name="title_activity_main">Sequoro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_help">Help</string>
    <string name="action_settings_bugs">Report Bugs</string>
    <string name="action_settings_logout">Logout</string>
    <string name="action_settings_about">About Us</string>
    <string name="scan">Scan</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="app_version">Sequoro 1.0</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_key_sync">KeySync</string>
    <string name="title_activity_rsatest">rsatest</string>
    <string name="title_activity_test">Test</string>

</resources>
