<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jithurjacob.sequoro.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100"  app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/action_settings_help"
        android:orderInCategory="100"  app:showAsAction="never" />
    <item android:id="@+id/action_bugs" android:title="@string/action_settings_bugs"
        android:orderInCategory="100"  app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_settings_about"
        android:orderInCategory="100"  app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="@string/action_settings_logout"
        android:orderInCategory="100"  app:showAsAction="never" />
</menu>
